test/1.4/errors/T_WTEMPLATEIS.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// COMPILE-ONLY

template t {
    shared method m() default {}
}

template x {
    /// WARNING WTEMPLATEIS
    is t;
    shared method m() {}
}

template y {
    // no warning: no trait markers
    is t;
    method m() {}
}

// no warning, preferred form
template z is t {
    shared method m() {}
}

port x is x;
port y is y;
port z is z;
